@@ -84,6 +84,9 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
 * (bug 11478) Fix undefined method call in file deletion interface
 * (bug 278) Search results no longer highlight incorrect partial word matches
 * Compatibility with incorrectly detected old-style DJVU mime types
+* (bug 11560) Fix broken HTML output from weird link nesting in edit comments.
+  Nested links (as in image caption text) still don't work _right_ but they're
+  less wrong.
 
 
 === API changes in 1.12 ===
